git HEAD

    * Remove fuzzy matching from constructor / ->results API. Use
      the new get_stop_by_name function instead (returns all matching stops).
      Update aseag-m accordingly

Travel::Status::DE::URA 0.01 - Sun Dec 22 2013

    * Initial release